fixing alignment for about page

--- a/src/Components/Layout/Content/About/About.module.css
+++ b/src/Components/Layout/Content/About/About.module.css
@@ -20,7 +20,8 @@
 
 .about_content {
   width: 100%;
-  margin-top: 1.5em;
+  margin-top: 75px;
+  margin-left: 1%;
   color: rgb(233, 92, 92);
 }
 
